Ensure Team name is truncated when too long

--- a/client/src/app/home_screen/body/dependencyView/teams/teamNames.css
+++ b/client/src/app/home_screen/body/dependencyView/teams/teamNames.css
@@ -68,6 +68,10 @@
     color: #707070;
     font-weight: 200;
     font-size: 20px;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .team-names-container-wrapper .team-names-container li.selected {
